--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ uvicorn = {extras = ["standard"], version = "^0.23.2"}
 sqlalchemy = "^2.0.21"
 aiomysql = "^0.2.0"
 pymysql = "^1.1.0"
+cryptography = "^41.0.4"
 
 
 [build-system]
