--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,9 @@ sqlalchemy = "^2.0.21"
 aiomysql = "^0.2.0"
 pymysql = "^1.1.0"
 cryptography = "^41.0.4"
+pydantic = {extras = ["email"], version = "^2.4.2"}
+python-multipart = "^0.0.6"
+python-dotenv = "^1.0.0"
 
 
 [build-system]
