--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,8 @@ cryptography = "^41.0.4"
 pydantic = {extras = ["email"], version = "^2.4.2"}
 python-multipart = "^0.0.6"
 python-dotenv = "^1.0.0"
+passlib = "^1.7.4"
+bcrypt = "^4.0.1"
 
 
 [build-system]
