--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ python-multipart = "^0.0.6"
 python-dotenv = "^1.0.0"
 passlib = "^1.7.4"
 bcrypt = "^4.0.1"
+python-jose = {extras = ["cryptography"], version = "^3.3.0"}
 
 
 [build-system]
