--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -27,5 +27,7 @@ services:
       interval: 10s
       timeout: 10s
       retries: 5
+    devices:
+      - "/dev/urandom:/dev/random"
 volumes:
   mysql_data:
