--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,7 @@ python-dotenv = "^1.0.0"
 passlib = "^1.7.4"
 bcrypt = "^4.0.1"
 python-jose = {extras = ["cryptography"], version = "^3.3.0"}
+apscheduler = "^3.10.4"
 
 
 [build-system]
